<resources>
    <string name="app_name">Question</string>
    <string name="game_title">Question!</string>
    <string name="start_game">Let\'s play</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="lets_go">Lets\' Go</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="option_reset">Try Again!</string>
    <string name="intro_player_guessing_message_1">"Hi, human! I'm a very smart computer, and I have heard that you are smart too. So, I decided to challenge you for a game. ;)"</string>
    <string name="intro_player_guessing_message_2">You\'ll have to think an animal according the list I\'ll show you, and then I\'ll make some questions. Based on your answers, I\'ll figure out which animal you chose. He he</string>
    <string name="intro_player_guessing_message_3">Sounds easy, don\'t you think? Now, check the following list:</string>
    <string name="intro_player_guessing_message_4">"A Lion, a horse, a human (you, I suppose), a monkey (someone like you, I guess), a bat, a whale, an ostrich, a penguin, a duck (my favorite), an eagle, a turtle, a crocodile and, last but not least, a snake (something like S)!"</string>
    <string name="intro_player_guessing_message_5">"Are you ready?"</string>
    <string name="intro_machine_guessing_message_1">"Hi, my favorite human! I'm a very creative computer, and I have heard that you are good in games. So, I decided to challenge you for a one. ;)"</string>
    <string name="intro_machine_guessing_message_2">It\'s time to I think an animal while you try to figure out which I chose. He he</string>
    <string name="intro_machine_guessing_message_3">Sounds easy, don\'t you think? Now, check the following list:</string>
    <string name="intro_machine_guessing_message_4">"Are you ready?"</string>
    <string name="intro_versus_mode_message1">Hi, darling! Here I will challenge you for a guessing game, however we have here some rules!</string>
    <string name="intro_versus_mode_message2">Every match, we start with 8 points, that will decrease as we ask new questions for each other.</string>
    <string name="intro_versus_mode_message3">A new question decreases one point, so the minimum point that will award for each correct answer is two points.</string>
    <string name="intro_versus_mode_message4">If one of us doesn\'t figure out which animal was thought, no points will be scored. If we don\'t think about any animal of the list, the adversary will score one point.</string>
    <string name="intro_versus_mode_message5">Sounds complicated, doesn\'t it? I know, a little confusing, but it will be fun!</string>
    <string name="question_mammal">"Is the animal a mammal?"</string>
    <string name="question_quadruped">"Is the animal a quadruped?"</string>
    <string name="question_carnivore">"Is the animal a carnivore?"</string>
    <string name="question_herbivore">"Is the animal a herbivore?"</string>
    <string name="question_fins">"This one is hard… does it have fins?"</string>
    <string name="question_flying">"Come on! Let me see… can it fly ?"</string>
    <string name="answer_lion">"You thought a Lion!"</string>
    <string name="answer_horse">"You thought a Horse!"</string>
    <string name="answer_human">"You thought a Human… you aren't creative at all. He he"</string>
    <string name="answer_monkey">"You thought a Monkey! Hey… you didn't confuse yourself, right? He he"</string>
    <string name="answer_bat">"You thought The Batman! I'm kidding… it's just a bat."</string>
    <string name="answer_whale">"You thought a Whale!"</string>
    <string name="answer_ostrich">"You thought an Ostrich!"</string>
    <string name="answer_penguin">"You thought a Penguin!"</string>
    <string name="answer_duck">"You thought a Duck! Qua Qua! (:v"</string>
    <string name="answer_eagle">"You thought an Eagle!"</string>
    <string name="answer_turtle">"You thought a Turtle!"</string>
    <string name="answer_crocodile">"You thought a Crocodile!"</string>
    <string name="answer_snake">"You thought a Snake!"</string>
    <string name="answer_none">"Well, don't get me wrong… but I believe that you didn't think nothing! You just trick me! >8¬("</string>
    <string name="animal_lion">"Lion"</string>
    <string name="animal_horse">"Horse"</string>
    <string name="animal_ostrich">"Ostrich"</string>
    <string name="animal_penguin">"Penguin"</string>
    <string name="animal_duck">"Duck"</string>
    <string name="animal_turtle">"Turtle"</string>
    <string name="animal_crocodile">"Crocodile"</string>
    <string name="animal_whale">"Whale"</string>
    <string name="animal_human">"Human"</string>
    <string name="animal_bat">"Bat"</string>
    <string name="animal_monkey">"Monkey"</string>
    <string name="animal_snake">"Snake"</string>
    <string name="animal_eagle">"Eagle"</string>
    <string name="lion_description">He has a large hair!</string>
    <string name="horse_description">Fancy and powerful, he likes grass.</string>
    <string name="penguin_description">He is a gentleman. I like gentlemen!</string>
    <string name="duck_description">My favorite, he is cute and likes fish.</string>
    <string name="turtle_description">Very smart, like me.</string>
    <string name="crocodile_description">He is silly and ugly.</string>
    <string name="whale_description">The biggest animal of the list, it is all that can I say.</string>
    <string name="human_description">You know more than me.</string>
    <string name="bat_description">He flies like a butterfly, but not.</string>
    <string name="monkey_description">He thinks that he is a human, but don\'t tell to him.</string>
    <string name="snake_description">Shua Shua Shua, said the snake.</string>
    <string name="eagle_description">Rhymes with Bingo.</string>
    <string name="player1_name">Me</string>
    <string name="player2_name">You</string>
    <string name="yes_answer">Yes!</string>
    <string name="no_answer">No!</string>
    <string name="btn_img_animals_list">Animals\' List</string>
    <string name="animals_list_tittle">Let\'s check our animals below:</string>
    <string name="player_turn_mode">Player\'s Turn</string>
    <string name="machine_turn_mode">My Turn</string>
    <string name="versus_mode">Versus Mode</string>
    <string name="machine_hint1">Click on the duck to see the animal list</string>
    <string name="opt_quest_mammal">"Is it a mammal?"</string>
    <string name="opt_quest_quadruped">"Is it a quadruped?"</string>
    <string name="opt_quest_carnivore">"Is it a carnivore?"</string>
    <string name="opt_quest_herbivore">"Is it a herbivore?"</string>
    <string name="opt_quest_fins">"Does it have fins?"</string>
    <string name="opt_quest_flying">"Can it fly?"</string>
    <string name="answer_animal_is_mammal">Yes! It is a beautiful mammal!</string>
    <string name="answer_animal_is_herbivore">Yes! It is a herbivore!</string>
    <string name="answer_animal_is_quadruped">Yes! It is a quadruped, like the lion…</string>
    <string name="answer_animal_is_carnivore">Yes! It likes meat.</string>
    <string name="answer_animal_has_fins">Yes! It has fins like a fish. :)</string>
    <string name="answer_animal_is_flying">Yes! It is a flying!</string>
    <string name="mach_negative_answer">Nop!</string>
    <string name="answer_option">Answer !</string>
    <string name="ask_option">Ask a question</string>
    <string name="machine_match_intro1">I already chose an animal! Now, what are you going to do?</string>
    <string name="machine_match_intro2">Animal chosen, game started! What should you do?</string>
    <string name="machine_match_intro3">What animal am I thinking?</string>
    <string name="back_button">Back</string>
    <string name="choose_animal_button">This is the animal!</string>
    <string name="no_questions_remain">You already asked all questions available…maybe you should try it.</string>
    <string name="match_positive_lion">You are right! I was thinking about the lion!</string>
    <string name="match_positive_horse">Dear horse! You are right!</string>
    <string name="match_positive_ostrich">You are right! Ostrich are very nice, aren\'t they?</string>
    <string name="match_positive_penguin">Gentleman, you are right! It was the penguin!!</string>
    <string name="match_positive_duck">Qua, qua! It was a duck, congratulations!</string>
    <string name="match_positive_turtle">Do you think that is a turtle? Well, you are right!</string>
    <string name="match_positive_crocodile">I thought about the crocodile and I got goose bumps! But well, you are right!</string>
    <string name="match_positive_whale">You are right! Whale are very nice!</string>
    <string name="match_positive_human">I really thought about you! Look, if you were wrong it would be a mess, wouldn\'t it?</string>
    <string name="match_positive_bat">If you say bat, so you are right!</string>
    <string name="match_positive_monkey">You are right, I thought about monkey!</string>
    <string name="match_positive_snake">It was a snake, you are right! SsSsSs</string>
    <string name="match_positive_eagle">You are right, darling! That even an eagle wouldn\'t get it. He he</string>
    <string name="match_negative_lion">No, no, no! I thought about lion!</string>
    <string name="match_negative_horse">You are wrong! I thought you would say horse, so I thought about horse!</string>
    <string name="match_negative_ostrich">I\'m sorry to say that, but you are wrong! Ostrich is the right choice.</string>
    <string name="match_negative_penguin">The correct answer is penguin, sir!!</string>
    <string name="match_negative_duck">It\'s wrong, the correct answer is duck. Qua, qua!</string>
    <string name="match_negative_turtle">Iiiih you are too slow, like a turtle..ops!</string>
    <string name="match_negative_crocodile">You are wrong, you would be right if you chose crocodile!</string>
    <string name="match_negative_whale">No, whale is the answer for everything!</string>
    <string name="match_negative_human">The correct answer is human! That was easy. He he</string>
    <string name="match_negative_bat">No! And the bat flies away..ops!</string>
    <string name="match_negative_monkey">That was close! Well, at least that you think monket is similar to that…</string>
    <string name="match_negative_snake">Watch out the snake! Sorry about that, but you are wrong!</string>
    <string name="match_negative_eagle">No! If you said eagle, you would be right!</string>
    <string name="match_neutral_answer">Stop to thinking… I believe that I didn\'t choose any animal. Hehehe</string>
    <string name="player_answer_lion">So, it is a lion, isn\'t it?</string>
    <string name="player_answer_horse">You thought about a horse!</string>
    <string name="player_answer_ostrich">Is it an ostrich?</string>
    <string name="player_answer_penguin">Penguin, is that you?</string>
    <string name="player_answer_duck">The duck is the right answer!</string>
    <string name="player_answer_turtle">Would be the animal a turtle?</string>
    <string name="player_answer_crocodile">Is it a crocodile?</string>
    <string name="player_answer_whale">Whale, right?</string>
    <string name="player_answer_human">Does it look like me?</string>
    <string name="player_answer_bat">The correct answer is bat, right?</string>
    <string name="player_answer_monkey">Let me see…monkey?</string>
    <string name="player_answer_snake">Did you think about snake?</string>
    <string name="player_answer_eagle">Is it an eagle?</string>
    <string name="player_guessing_animal">So, which animal am I thinking?</string>
    <string name="versus_mode_score">"""Player [ %1$d ] X [ %2$d ] Computer """</string>
</resources>