<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityGameIntroPart1"
    android:background="@android:color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/intro_text"
        style="@style/ConsoleAppDialog"
        android:layout_margin="8dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/btn_previous"
            style="@style/ConsoleAppButton"
            android:text="@string/previous"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_next"
            style="@style/ConsoleAppButton"
            android:text="@string/next"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btn_start_quiz"
            style="@style/ConsoleAppButton"
            android:text="@string/lets_go"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>