<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityGameQuestions"
    android:background="@android:color/black">


    <TextView
        android:id="@+id/txt_dialog"
        style="@style/ConsoleAppDialog"
        android:layout_margin="8dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/btn_no"
            style="@style/ConsoleAppButton"
            android:text="@string/option_no"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_yes"
            style="@style/ConsoleAppButton"
            android:text="@string/option_yes"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/btn_reset"
            style="@style/ConsoleAppButton"
            android:text="@string/option_reset"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />
    </RelativeLayout>
</LinearLayout>