<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:scrollbarThumbVertical="@android:color/white"
    tools:context=".ActivityGameIntroPart2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/ConsoleAppDialog"
        android:text="@string/animals_list_tittle"/>

    <ListView
        android:id="@+id/listview_animal"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:listSelector="@android:color/transparent"
        android:scrollbarThumbVertical="@android:color/white"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/btn_previous"
            style="@style/ConsoleAppButton"
            android:text="@string/previous"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_start_quiz"
            style="@style/ConsoleAppButton"
            android:text="@string/lets_go"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>
