<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:scrollbarThumbVertical="@android:color/white"
    tools:context=".AnimalOptionListActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        style="@style/ConsoleAppDialog"
        android:text="@string/animals_list_tittle"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listview_animal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical"
        android:scrollbarThumbVertical="@android:color/white">
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/btn_back"
            style="@style/ConsoleAppButton"
            android:text="@string/back_button"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/btn_finish"
            style="@style/ConsoleAppButton"
            android:text="@string/choose_animal_button"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</LinearLayout>